# cargo-monorepo

./: Cargo.toml  README.md
cargo-monorepo/: Cargo.toml
cargo-monorepo/src/: cargo.rs  config.rs  github.rs  main.rs  template.rs  utils.rs
cargo-monorepo/src/release/: context.rs  mod.rs
cargo-monorepo/src/release/step/: artifacts.rs  cargo.rs  changelog.rs  github.rs  init.rs  mod.rs  version.rs
